--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1.0; user-scalable=false;" />
     <title>Meonc Studio</title>
+    <link rel="stylesheet" type="text/css" href="spectre.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" type="text/css" href="font.css" />
 </head>
 
 <body>
-    <header class="navbar">
+    <!-- <header class="navbar">
         <section class="navbar-section">
             <a href="/" class="btn btn-link"><i class="material-icons">home</i></a>
             <a href="project/" class="btn btn-link"><i class="material-icons">category</i></a>
@@ -16,10 +17,10 @@
         <section class="navbar-center">
         </section>
         <section class="navbar-section">
-            <a href="http://jimschenchen.com" target="_blank" class="btn btn-link">JM</a>
+            <a href="https://jimschenchen.com" target="_blank" class="btn btn-link">JM</a>
             <a href="https://www.cloudyyoung.com" target="_blank" class="btn btn-link">CY</a>
         </section>
-    </header>
+    </header> -->
 
     <div class="index-geo">
         <div class="geo geo4"></div>
