--- a/index.html
+++ b/index.html
@@ -10,20 +10,21 @@
 
 <body>
     <div class="index-geo">
-        <div class="geo geo4"></div>
         <div class="geo geo1"></div>
         <div class="geo geo2"></div>
         <div class="geo geo3"></div>
         <div class="geo geo5"></div>
         <div class="geo geo6"></div>
         <div class="geo geo7"></div>
+        <div class="geo geo4"></div>
     </div>
 
-    <div class="hero index-banner">
-        <div class="hero-body">
-            <div class="icon"></div>
+    <div class="index-banner">
+        <div class="content">
+            <img class="icon" src="icons/icon-white.svg" />
             <h2>Meonc Studio</h2>
         </div>
+
     </div>
 
     <div class="hero copyright">
