--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
 <body>
     <div class="index-geo">
-        <div class="geo geo1"></div>
-        <div class="geo geo2"></div>
-        <div class="geo geo3"></div>
-        <div class="geo geo5"></div>
-        <div class="geo geo6"></div>
-        <div class="geo geo7"></div>
-        <div class="geo geo4"></div>
+        <div class="geo1"></div>
+        <div class="geo2"></div>
+        <div class="geo3"></div>
+        <div class="geo5"></div>
+        <div class="geo6"></div>
+        <div class="geo7"></div>
+        <div class="geo4"></div>
     </div>
 
     <div class="index-banner">
