--- a/index.html
+++ b/index.html
@@ -9,7 +9,107 @@
 </head>
 
 <body>
-    <div class="index-geo">
+
+    <div class="banner index">
+        <div class="content">
+            <img class="icon" src="icons/icon-white.svg" />
+            <h2>Meonc Studio</h2>
+        </div>
+    </div>
+
+    <div class="member">
+        <div class="container grid-sm">
+            <h2>Members</h2>
+            <div class="columns">
+                <div class="column col-md-6 col-sm-12">
+                    <div class="card">
+                        <div class="card-header">
+                            <figure class="avatar avatar-xl">
+                                <img src="https://avatars.githubusercontent.com/u/26497506?v=4" alt="...">
+                            </figure>
+                            <div class="card-title h5">jimschenchen</div>
+                            <div class="card-subtitle text-gray"></div>
+                        </div>
+                        <div class="card-body"></div>
+                    </div>
+                </div>
+                <div class="column col-md-6 col-sm-12">
+                    <div class="card">
+                        <div class="card-header">
+                            <figure class="avatar avatar-xl">
+                                <img src="https://avatars.githubusercontent.com/u/20573623?v=4" alt="...">
+                            </figure>
+                            <div class="card-title h5">Cloudy Young</div>
+                            <div class="card-subtitle text-gray"></div>
+                        </div>
+                        <div class="card-body"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="project">
+        <div class="container grid-md">
+            <h2>Projects</h2>
+            <div class="columns">
+                <div class="column col-6 col-xs-12">
+                    <div class="card">
+                        <div class="card-image">
+                            <img class="img-responsive" src="https://i.loli.net/2020/02/24/4WplS2nxBELNFXZ.png"
+                                alt="Cupids Arrow">
+                        </div>
+                        <div class="card-header">
+                            <div class="card-title h5">Cupids Arrow</div>
+                            <div class="card-subtitle text-gray">University of Toronto Club</div>
+                        </div>
+                        <div class="card-body">Spring / Summer 2020</div>
+                        <div class="card-footer"></div>
+                    </div>
+                </div>
+                <div class="column col-6 col-xs-12">
+                    <div class="card">
+                        <div class="card-image">
+                            <img class="img-responsive"
+                                src="https://github.com/meoncstudio/anti_2019-ncov/raw/master/preview.png" alt="Covid">
+                        </div>
+                        <div class="card-header">
+                            <div class="card-title h5">Anti 2019-NCOV</div>
+                            <div class="card-subtitle text-gray">
+                                Self Query Covid-19
+                            </div>
+                        </div>
+                        <div class="card-body">Winter 2020</div>
+                        <div class="card-footer"></div>
+                    </div>
+                </div>
+                <div class="column col-6 col-xs-12">
+                    <div class="card">
+                        <div class="card-image">
+                            <img class="img-responsive"
+                                src="https://raw.githubusercontent.com/MeoncStudio/Starry/master/211469506310972563.jpg"
+                                alt="Starry">
+                        </div>
+                        <div class="card-header">
+                            <div class="card-title h5">Starry</div>
+                            <div class="card-subtitle text-gray">
+                                Wuhan Maple Leaf Internation School <br>
+                                Class 2018 Graduation Prom
+                            </div>
+                        </div>
+                        <div class="card-body">Spring 2018</div>
+                        <div class="card-footer"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="copyright">
+        <p>&copy; 2021 All rights reserved.</p>
+    </div>
+
+    <div class="geo index">
         <div class="geo1"></div>
         <div class="geo2"></div>
         <div class="geo3"></div>
@@ -17,20 +117,6 @@
         <div class="geo6"></div>
         <div class="geo7"></div>
         <div class="geo4"></div>
-    </div>
-
-    <div class="index-banner">
-        <div class="content">
-            <img class="icon" src="icons/icon-white.svg" />
-            <h2>Meonc Studio</h2>
-        </div>
-
-    </div>
-
-    <div class="hero copyright">
-        <div class="hero-body">
-            <p>&copy; 2021 All rights reserved.</p>
-        </div>
     </div>
 </body>
 
