--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@
         <div class="geo5"></div>
         <div class="geo6"></div>
         <div class="geo7"></div>
+    </div>
+    <div class="geo index bg">
         <div class="geo4"></div>
     </div>
 </body>
