--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1.0; user-scalable=false;" />
     <title>Meonc Studio</title>
+    <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" type="text/css" href="spectre.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" type="text/css" href="font.css" />
